# video_resizer_multithreading

./: CMakeLists.txt  main.cpp
include/: VideoEditor.h
src/: VideoEditor.cpp
